add html and css rules

--- a/index.html
+++ b/index.html
@@ -10,12 +10,138 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel=“preconnect” href=“https://fonts.googleapis.com”>
+    <link rel=“preconnect” href=“https://fonts.gstatic.com” crossorigin>
+    <link
+        href=“https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=VT323&display=swap”
+        rel=“stylesheet”>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <div id="app">
+        <div class="container my-5 vh_90">
+            <div class="row" style="height: 100%;">
+                <div class="col-4">
+                    <div class="row" style="height: 100%;">
+                        <div class="col-12 p-0 d-flex flex-column">
+                            <!-- left head -->
+                            <div class="bg_principal border-bottom d-flex justify-content-between align-items-center">
+                                <div class="p-1 d-flex align-items-center">
+                                    <img class="rounded-pill" width="40" src="./assets/img/avatar_1.jpg" alt="">
+                                    <small class="p-2">Utente</small>
+                                </div>
+                                <div class="p-1">
+                                    <i class="fa-solid fa-circle-notch principal px-2"></i>
+                                    <i class="fa-solid fa-message principal px-2"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical principal px-2"></i>
+                                </div>
+                            </div>
+                            <!-- stop notification -->
+                            <div class="stop_notification border-bottom d-flex align-items-center p-2">
+                                <div>
+                                    <div class="rounded-pill bg_white p-2 me-2 focus">
+                                        <i class="fa-solid fa-bell-slash"></i>
+                                    </div>
+                                </div>
+                                <div class="font_size_sm">
+                                    <div>
+                                        Ricevi Notifiche dei nuovi messaggi
+                                    </div>
+                                    <a href="#">
+                                        Attiva notifiche desktop
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- search bar -->
+                            <div class="bg_light border-bottom">
+                                <div class="input-group  p-1">
+                                    <span class="input-group-text" id="basic-addon1"><i
+                                            class="fa-solid fa-magnifying-glass fa-sm"></i></span>
+                                    <input type="text" class="form-control font_size_sm " placeholder="Username"
+                                        aria-label="Username" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                            <!-- contacts -->
+                            <div class="bg_white chats">
+                                <div class="d-flex justify-content-between border-bottom">
+                                    <div class="d-flex p-2">
+                                        <img class="rounded-pill" width="30" height="30" src="./assets/img/avatar_1.jpg"
+                                            alt="">
+                                        <div class="mx-2">
+                                            <div class="font_size_md">Michele</div>
+                                            <div class="font_size_sm">Ultimo messaggio inviato</div>
+                                        </div>
+                                    </div>
 
+                                    <div class="font_size_sm p-2    ">12.00</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-8 p-0 d-flex flex-column">
+                    <!-- right head -->
+                    <div
+                        class="bg_principal p-1 d-flex border-start border-white justify-content-between align-items-center">
+                        <div class="d-flex p-2">
+                            <img class="rounded-pill" width="40" height="40" src="./assets/img/avatar_1.jpg" alt="">
+                            <div class="mx-2">
+                                <div class="font_size_md">Michele</div>
+                                <div class="font_size_sm">Ultimo accesso oggi alle 12.00</div>
+                            </div>
+                        </div>
+                        <div class="p-1">
+                            <i class="fa-solid fa-magnifying-glass principal px-2"></i>
+                            <i class="fa-solid fa-paperclip principal px-2"></i>
+                            <i class="fa-solid fa-ellipsis-vertical principal px-2"></i>
+                        </div>
+                    </div>
+                    <!-- right body -->
+                    <div class="bg_whatsapp row m-0">
+                        <div class="col-12 p-0">
+                            <div class="d-flex flex-column">
+                                <div class="message align-self-end p-4">
+                                    <div class="badge bg_green text-black p-2 d-flex flex-column">
+                                        <div class="align-self-start lh-lg">Hai portato a spasso il cane?</div>
+                                        <div class="align-self-end font_size_sm">15:30</div>
+                                    </div>
+                                </div>
+                                <div class="message align-self-end p-4">
+                                    <div class="badge bg_green text-black p-2 d-flex flex-column">
+                                        <div class="align-self-start lh-lg">Ricordati di stendere i panni</div>
+                                        <div class="align-self-end font_size_sm">15:45</div>
+                                    </div>
+                                </div>
+                                <div class="message align-self-start p-4">
+                                    <div class="badge bg_white text-black p-2 d-flex flex-column">
+                                        <div class="align-self-start lh-lg">Tutto fatto!</div>
+                                        <div class="align-self-end font_size_sm">16:15</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- right foot -->
+                    <div class="d-flex bg_light p-2 justify-content-between align-items-center">
+                        <a class="px-4" href="#" style="font-size: 1rem; color: grey;"><i
+                                class="fa-regular fa-face-smile"></i></a>
+                        <div class="w_100">
+                            <div class="input-group">
+                                <input type="text" class="form-control font_size_sm" placeholder="Scrivi un messaggio"
+                                    aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                        <a class="px-4" href="#"><i style="font-size: 1rem; color: grey;"
+                                class="fa-solid fa-microphone"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
