--- a/index.html
+++ b/index.html
@@ -107,13 +107,20 @@
                     <div class="bg_whatsapp row m-0">
                         <div class="col-12 p-0" style="height: 100%; overflow-y: auto;">
                             <div class="d-flex flex-column">
-                                <div v-for="message in contacts[active].messages" class="message py-2 pe-4 "
+                                <div @click="openDropdown(index)" v-for="(message, index) in contacts[active].messages"
+                                    class="message py-2 pe-4 "
                                     :class="[message.status == 'sent' ? flexEnd  : flexStart], [message.status == 'sent' ? 'pe-4'  : 'ps-4']">
                                     <div class=" badge text-black p-2 d-flex flex-column" :class="message.status">
+                                        <a href="#" class="align-self-end text-black position-relative"><i
+                                                class="fa-solid fa-angle-down"></i>
+                                            <ul :id="'drop' + index" class="d-none position-absolute p-2 rounded"
+                                                style="top: 10px; right: 0; list-style: none; line-height: 2rem; background-color: aliceblue;">
+                                                <li>Message Info</li>
+                                                <li>Delete Message</li>
+                                            </ul>
+                                        </a>
                                         <div class=" align-self-start">{{message.message}}</div>
-                                        <div class="align-self-end font_size_sm">{{message.date.substring(11,16)}}
-                                        </div>
-
+                                        <div class="align-self-end font_size_sm">{{message.date.substring(11,16)}}</div>
                                     </div>
                                 </div>
                             </div>
@@ -123,6 +130,7 @@
                     <div class="d-flex bg_light p-2 justify-content-between align-items-center">
                         <a class="px-4" href="#" style="font-size: 1rem; color: grey;"><i
                                 class="fa-regular fa-face-smile"></i></a>
+
                         <div class="w_100">
                             <div class="input-group">
                                 <input @keydown.enter="sendMessage" v-model="newUserMessage" type="text"
