--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                             <ul :id="'drop' + index" class="d-none position-absolute p-2 rounded"
                                                 style="top: 10px; right: 0; list-style: none; line-height: 2rem; background-color: aliceblue;">
                                                 <li>Message Info</li>
-                                                <li>Delete Message</li>
+                                                <li @click="removeMsg(index)">Delete Message</li>
                                             </ul>
                                         </a>
                                         <div class=" align-self-start">{{message.message}}</div>
